external.yml
apiVersion: v1
kind: Service
metadata:
  name: webservice1-service
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 49152
  externalIPs:
    - 192.168.49.1
