service.yml
apiVersion: v1
kind: Service
metadata:
  name: webservice2-service
spec:
  selector:
    app: webservice2
  type: NodePort
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 5000
