ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice1-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - esther'
spec:
  rules:
    - host: subdomain1.webservice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webservice1-service
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice2-ingress
spec:
  rules:
    - host: subdomain2.webservice.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webservice2-service
                port:
                  number: 8081
