webservice2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webservice2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webservice2
  template:
    metadata:
      labels:
        app: webservice2
    spec:
      containers:
      - name: webservice2
        image: webservice2 
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webservice2-service
spec:
  selector:
    app: webservice2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice2-subdomain1
spec:
  rules:
  - host: 192.168.49.1     #replace with domein/IP
    http:
      paths:
      - path: /subdomain1
        pathType: Prefix
        backend:
          service:
            name: webservice2-service
            port:
              number: 80
        tls:
          # Configure TLS/SSL settings if needed
          - hosts:
            - 192.168.49.1
            secretName: kube-secret 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice2-subdomain2-no-auth
spec:
  rules:
  - host: 192.168.49.1   #replace with domein/IP
    http:
      paths:
      - path: /subdomain2
        pathType: Prefix
        backend:
          service:
            name: webservice2-service
            port:
              number: 80
